fix: align items.

--- a/application/ClientApp/src/app/navigation/navigation.component.scss
+++ b/application/ClientApp/src/app/navigation/navigation.component.scss
@@ -11,3 +11,12 @@
      display: flex;
      flex-flow: column;
  }
+
+ .mat-icon {
+    vertical-align: baseline;
+ }
+
+ .material-icons {
+    display: inline-flex;
+    vertical-align: bottom;
+ }
